[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Me.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Family.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Home.gd" type="Script" id=5]
[ext_resource path="res://game_assets/Lovers_Quarrel/LoversQuarrel-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 13.3631

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -0.215332, -306.512 )
b = Vector2( -0.715332, 44.0878 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -576, -24 )
b = Vector2( 2048, -24 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 4768, 48 )
b = Vector2( -24, 48 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 6 )

[node name="Home" type="Node2D"]
script = ExtResource( 5 )

[node name="Ground" parent="." instance=ExtResource( 1 )]

[node name="Boost" type="Node2D" parent="."]
position = Vector2( 10346, 435.889 )
__meta__ = {
"_edit_group_": true
}

[node name="Boost" type="Area2D" parent="Boost"]
position = Vector2( 5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boost/Boost"]
shape = SubResource( 1 )

[node name="Family" parent="Boost/Boost" instance=ExtResource( 3 )]
position = Vector2( -5, 0 )

[node name="Goal" type="Node2D" parent="."]
position = Vector2( 12303, 435 )
__meta__ = {
"_edit_group_": true
}

[node name="Goal" type="Area2D" parent="Goal"]
position = Vector2( 5, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal/Goal"]
shape = SubResource( 1 )

[node name="Family" parent="Goal/Goal" instance=ExtResource( 3 )]
position = Vector2( -5, 0 )

[node name="Me" parent="." instance=ExtResource( 2 )]
position = Vector2( 60, 536 )

[node name="Motivation" type="Node2D" parent="."]

[node name="FamilyReason" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 3773.2, 537.801 )

[node name="FamilyLeap1" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 4599.2, 536.801 )

[node name="FamilyLeap2" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 5503.2, 535.801 )

[node name="FamilyCatch" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 6938.21, 2483.8 )

[node name="FamilyStep1" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 7994.61, 1867 )

[node name="FamilyStep2" parent="Motivation" instance=ExtResource( 3 )]
position = Vector2( 8964.81, 997.802 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Checks" type="Node2D" parent="."]

[node name="CheckTutorial" type="Area2D" parent="Checks"]
position = Vector2( 179.891, 504.026 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/CheckTutorial"]
shape = SubResource( 2 )

[node name="ChecksHello" type="Area2D" parent="Checks"]
position = Vector2( 1344, 504 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksHello"]
shape = SubResource( 2 )

[node name="ChecksReason" type="Area2D" parent="Checks"]
position = Vector2( 2264, 296 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksReason"]
shape = SubResource( 2 )

[node name="ChecksBackground" type="Area2D" parent="Checks"]
position = Vector2( 3032, 496 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksBackground"]
shape = SubResource( 2 )

[node name="ChecksLeap1" type="Area2D" parent="Checks"]
position = Vector2( 4424, 512 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksLeap1"]
shape = SubResource( 2 )

[node name="ChecksLeap2" type="Area2D" parent="Checks"]
position = Vector2( 5328, 520 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksLeap2"]
shape = SubResource( 2 )

[node name="ChecksFamily" type="Area2D" parent="Checks"]
position = Vector2( 7104, 2432 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksFamily"]
shape = SubResource( 2 )

[node name="ChecksUp1" type="Area2D" parent="Checks"]
position = Vector2( 7696, 2072 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksUp1"]
shape = SubResource( 2 )

[node name="ChecksUp2" type="Area2D" parent="Checks"]
position = Vector2( 8512, 1208 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksUp2"]
shape = SubResource( 2 )

[node name="ChecksBoost1" type="Area2D" parent="Checks"]
position = Vector2( 10200, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksBoost1"]
shape = SubResource( 2 )

[node name="ChecksBoost2" type="Area2D" parent="Checks"]
position = Vector2( 11792, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/ChecksBoost2"]
shape = SubResource( 2 )

[node name="CheckFall" type="Area2D" parent="Checks"]
position = Vector2( 5312, 1304 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/CheckFall"]
shape = SubResource( 3 )

[node name="CheckRestart" type="Area2D" parent="Checks"]
position = Vector2( 9440, 3216 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checks/CheckRestart"]
shape = SubResource( 5 )

[node name="Jump" type="Label" parent="."]
margin_left = 10696.0
margin_top = 520.0
margin_right = 10799.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Jump!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Boost/Boost" to="Me" method="_on_Boost_body_entered"]
[connection signal="body_entered" from="Goal/Goal" to="." method="_on_Goal_body_entered"]
[connection signal="body_exited" from="Checks/CheckTutorial" to="." method="_on_CheckTutorial_body_exited"]
[connection signal="body_exited" from="Checks/ChecksHello" to="." method="_on_ChecksHello_body_exited"]
[connection signal="body_exited" from="Checks/ChecksReason" to="." method="_on_ChecksReason_body_exited"]
[connection signal="body_exited" from="Checks/ChecksBackground" to="." method="_on_ChecksBackground_body_exited"]
[connection signal="body_exited" from="Checks/ChecksLeap1" to="." method="_on_ChecksLeap1_body_exited"]
[connection signal="body_exited" from="Checks/ChecksLeap2" to="." method="_on_ChecksLeap2_body_exited"]
[connection signal="body_exited" from="Checks/ChecksFamily" to="." method="_on_ChecksFamily_body_exited"]
[connection signal="body_exited" from="Checks/ChecksUp1" to="." method="_on_ChecksUp1_body_exited"]
[connection signal="body_exited" from="Checks/ChecksUp2" to="." method="_on_ChecksUp2_body_exited"]
[connection signal="body_exited" from="Checks/ChecksBoost1" to="." method="_on_ChecksBoost1_body_exited"]
[connection signal="body_exited" from="Checks/ChecksBoost2" to="." method="_on_ChecksBoost2_body_exited"]
[connection signal="body_exited" from="Checks/CheckFall" to="." method="_on_CheckFall_body_exited"]
[connection signal="body_exited" from="Checks/CheckRestart" to="." method="_on_CheckRestart_body_exited"]
